# simply

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: test.yml
src/: esplora.rs  helpers.rs  main.rs  script.rs  tracker.rs  transaction.rs
src/commands/: build.rs  debug.rs  deposit.rs  mod.rs  run.rs  sign.rs  test.rs  withdraw.rs
tests/: integration_tests.rs
tests/data/: hodl_vault.simf  hodl_vault.wit  sighash_none.simf  sighash_none.wit
