[package]
name = "simply"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simply"
path = "src/main.rs"

[dependencies]
simfony = { git = "https://github.com/m-kus/simfony", rev = "74b94b4414d6d29ad254026168b4ee2c50cbde40", features = ["serde"] }
simplicity-lang = { git = "https://github.com/m-kus/rust-simplicity", rev = "7c43d07c12a47906fb1de6af35f8d0f2c2f93127", features = ["test-utils", "debug"] }
itertools = "0.11"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
serde_json = "1.0"
hex = "0.4"
