[package]
name = "simply"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simply"
path = "src/main.rs"

[[test]]
name = "integration-tests"
path = "tests/integration_tests.rs"

[dependencies]
simfony = { git = "https://github.com/m-kus/simfony", rev = "4cfde3af4bee376403cebd9b9acefff7ec21fbff", features = ["serde"] }
simplicity-lang = { git = "https://github.com/m-kus/rust-simplicity", rev = "9256c8433125145d643afd50e00a6670738ee749", features = ["test-utils"] }
itertools = "0.11"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
which = "5.0"
